# Devtherapy-Bot

./: .gitignore  README.md  commands.py  config.py  db.py  dc_utils.py  devtherapy.example.env  gemini.py  listeners.py  main.py  models.py  puppeteer.py  pyproject.toml  requirements.txt  router.py  scraper.py  settings.py  users.db  utils.py
.example.envs/: prod.env  test.py
plugins/: loader.py  models.py
plugins/dvorak/: commands.py  config.py  core.py  listeners.py  ui.py  utils.py
plugins/scraper/: config.py  core.py  listeners.py
plugins/summarizer/: commands.py  core.py  gemini_manager.py  models.py
templates/: commands.py  config.py  listeners.py  ui.py
